@@ -1,6 +1,9 @@
 devel
 -----
 
+* Improve log output for WAL recovery, by providing more information and
+  making the wording more clear.
+
 * Updated lz4 to version 1.9.3
 
 * Added option `--custom-query-file` to arangoexport, so that a custom query
